# yolov5

./: CONTRIBUTING.md  cnmm_val.py  cnnl_perf_model.py  cnnl_val.py  detect.py  export.py  train.py  tutorial.ipynb  val.py
MagicMind/: .gitignore
MagicMind/cpp/: CMakeLists.txt  README.md  infer_model.cpp  mm_yolov5.cpp  sample_buffer.cpp
MagicMind/cpp/include/: infer_model.h  sample_buffer.h  sample_common.h
MagicMind/python/: README.md  calibrator_custom_data.py  coco_test2017.txt  copy_quant_data.sh  magicmind_model.py  mm_eval.py  mm_infer.py  mm_perf.py  mm_utils.py  onnx2mm.py
mlu_tools/: torch_gpu2mlu.py
models/: common.py  experimental.py  yolo.py
utils/: activations.py  autoanchor.py  autobatch.py  benchmarks.py  dataloaders.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
utils/aws/: resume.py
utils/flask_rest_api/: restapi.py
utils/loggers/: __init__.py
utils/loggers/wandb/: wandb_utils.py
